# Ironclad-COBOL-to-Rust

./: .gitignore  Dockerfile  Dockerfile.parity  LICENSE  NOTICE  README.md  SIMON_QA.md  checkpoint_runtime_hardening.md  data_binary_001_BINARY__64bit_unsigned_arithmetic_notrunc.rs  data_binary_002_BINARY__64bit_signed_negative_constant_range.rs  data_binary_004_COMP-4_No_Truncate.rs  data_binary_005_MOVE_DISPLAY_to_BINARY.rs  data_binary_006_MOVE_PACKED-DECIMAL_to_BINARY.rs  data_binary_007_MOVE_BINARY_to_PACKED-DECIMAL.rs  data_binary_009_PPP_COMP-5.rs  data_display_002_DISPLAY__Sign_EBCDIC.rs  data_display_005_PPP_DISPLAY.rs  data_display_006_arithmetic_truncation_with_USAGE_DISPLAY.rs  data_display_007_DISPLAY__ADD_and_SUBTRACT_w_o_SIZE_ERROR.rs  data_packed_001_PACKED-DECIMAL_used_with_MOVE.rs  data_packed_005_PACKED-DECIMAL_used_with_INITIALIZE.rs  data_packed_007_PACKED-DECIMAL_comparison.rs  data_packed_008_PACKED-DECIMAL_numeric_test__1_.rs  data_packed_011_COMP-6_used_with_MOVE.rs  data_packed_014_COMP-6_comparison.rs  data_packed_015_COMP-3_vs__COMP-6_-_BCD_comparison.rs  data_packed_016_PPP_COMP-3.rs  data_packed_018_arithmetic_truncation_with_USAGE_PACKED-DECIMAL.rs  data_packed_019_MOVE_between_several_BCD_fields.rs  data_pointer_000_POINTER__display.rs  docker-compose.yml  emulator.py  listings_003_Partial_replacement_with_literals.rs  listings_004_COPY_replacement_with_partial_match.rs  listings_012_COPY_multiple_files.rs  listings_016_Multiple_programs_in_one_compilation_group.rs  listings_017_command_line.rs  listings_020_Symbols__pointer.rs  (+168 more)
(+3453 files in other folders)
